NFS Firewall
-A INPUT -m state --state NEW -p udp --dport 111 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 111 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 2049 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 32803 -j ACCEPT
-A INPUT -m state --state NEW -p udp --dport 32769 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 892 -j ACCEPT
-A INPUT -m state --state NEW -p udp --dport 892 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 875 -j ACCEPT
-A INPUT -m state --state NEW -p udp --dport 875 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 662 -j ACCEPT
-A INPUT -m state --state NEW -p udp --dport 662 -j ACCEPT

-A OS_FIREWALL_ALLOW -m state --state NEW -p udp --dport 111 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p tcp --dport 111 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p tcp --dport 2049 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p tcp --dport 32803 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p udp --dport 32769 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p tcp --dport 892 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p udp --dport 892 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p tcp --dport 875 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p udp --dport 875 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p tcp --dport 662 -j ACCEPT
-A OS_FIREWALL_ALLOW -m state --state NEW -p udp --dport 662 -j ACCEPT
